flvdemux: don't leak stream_id string

https://bugzilla.gnome.org/show_bug.cgi?id=705142